# ser-sync-pro

./: .gitignore  AGENT_LOG.md  README.md  build.xml  ser-sync.properties.template  ssync.properties.template
cdd-sync-pro/: cdd-sync.properties.template  ser-sync.properties.template
log/: Live%%GOAT HILL TAVERN%%25-08-22.crate  Live%%GOAT HILL TAVERN%%25-09-05.crate  Live%%GOAT HILL TAVERN%%25-09-20.crate  Live%%GOAT HILL TAVERN%%25-10-04.crate  Live%%GOAT HILL TAVERN%%25-11-14.crate  Live%%GOAT HILL TAVERN%%26-01-17.crate  Live%%GOAT HILL TAVERN.crate  Live%%MISSION CONTROL%%25-08-15.crate  Live%%MISSION CONTROL.crate
md/: ACTION_PLAN.md  AGENT_LOG.md  CHANGELOG.md  CODEBASE_GUIDE.md  CONCEPTS.md  DATABASE_GUIDE.md  TODO.md
python/: .gitignore  config.py  config.template.yaml  gui.py  main.py  pyproject.toml  requirements.txt
python/core/: binary_utils.py  path_utils.py  serato_parser.py
python/sync/: backup.py  database_fixer.py  dupe_mover.py  media_library.py  pipeline.py  pref_sorter.py  session_fixer.py
python/tests/: test_path_utils.py  test_pipeline.py  test_serato_parser.py
s3-smart-sync/: CODEBASE_GUIDE.md  README.md  archive_handler.py  config.py  db.py  diff_engine.py  logger.py  main.py  requirements.txt  s3_client.py  scanner.py
ser-sync-pro/: ser-sync.properties.template
session-fixer/: CODEBASE_GUIDE.md  README.md
src/: Main.java  ser_sync_backup.java  ser_sync_config.java  ser_sync_config.java.bak  ser_sync_crate.java  ser_sync_crate_fixer.java  ser_sync_crate_fixer.java.bak  ser_sync_database.java  ser_sync_database_fixer.java  (+25 more)
(+659 files in other folders)
